// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render 98% collected station icon as collected 13 1`] = `
<sc-station-icon class="hydrated">
  <mock:shadow-root>
    <div class="station-icon-wrapper station-icon-size-normal">
      <svg class="progress-ring" width="30" height="30" viewBox="0 0 30 30" role="progressbar" aria-label="Collection progress" aria-valuemin="0" aria-valuemax="100" aria-valuenow="100" focusable="false">
        <circle class="progress-ring-track" cx="15" cy="15" r="13.5" stroke-width="3" fill="none"></circle>
        <circle class="progress-ring-fill" cx="15" cy="15" r="13.5" stroke-width="3" fill="none" stroke-linecap="round" stroke-dasharray="84.82300164692441" stroke-dashoffset="0" transform="rotate(-90 15 15)"></circle>
      </svg>
      <div class="station-icon">
        <slot></slot>
        <div class="collected-icon animate-pop-appearance">
          <ion-icon name="checkmark"></ion-icon>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  13
</sc-station-icon>
`;

exports[`render collected station icon 13 1`] = `
<sc-station-icon class="hydrated">
  <mock:shadow-root>
    <div class="station-icon-wrapper station-icon-size-normal">
      <svg class="progress-ring" width="30" height="30" viewBox="0 0 30 30" role="progressbar" aria-label="Collection progress" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0" focusable="false">
        <circle class="progress-ring-track" cx="15" cy="15" r="13.5" stroke-width="3" fill="none"></circle>
        <circle class="progress-ring-fill" cx="15" cy="15" r="13.5" stroke-width="3" fill="none" stroke-linecap="round" stroke-dasharray="84.82300164692441" stroke-dashoffset="84.82300164692441" transform="rotate(-90 15 15)"></circle>
      </svg>
      <div class="station-icon">
        <slot></slot>
        <div class="collected-icon animate-pop-appearance">
          <ion-icon name="checkmark"></ion-icon>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  13
</sc-station-icon>
`;

exports[`render large station icon 13 1`] = `
<sc-station-icon class="hydrated">
  <mock:shadow-root>
    <div class="station-icon-wrapper station-icon-size-large">
      <svg class="progress-ring" width="40" height="40" viewBox="0 0 40 40" role="progressbar" aria-label="Collection progress" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0" focusable="false">
        <circle class="progress-ring-track" cx="20" cy="20" r="18.5" stroke-width="3" fill="none"></circle>
        <circle class="progress-ring-fill" cx="20" cy="20" r="18.5" stroke-width="3" fill="none" stroke-linecap="round" stroke-dasharray="116.23892818282235" stroke-dashoffset="116.23892818282235" transform="rotate(-90 20 20)"></circle>
      </svg>
      <div class="station-icon">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  13
</sc-station-icon>
`;

exports[`render normal station icon 13 1`] = `
<sc-station-icon class="hydrated">
  <mock:shadow-root>
    <div class="station-icon-wrapper station-icon-size-normal">
      <svg class="progress-ring" width="30" height="30" viewBox="0 0 30 30" role="progressbar" aria-label="Collection progress" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0" focusable="false">
        <circle class="progress-ring-track" cx="15" cy="15" r="13.5" stroke-width="3" fill="none"></circle>
        <circle class="progress-ring-fill" cx="15" cy="15" r="13.5" stroke-width="3" fill="none" stroke-linecap="round" stroke-dasharray="84.82300164692441" stroke-dashoffset="84.82300164692441" transform="rotate(-90 15 15)"></circle>
      </svg>
      <div class="station-icon">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  13
</sc-station-icon>
`;

exports[`render small station icon 13 1`] = `
<sc-station-icon class="hydrated">
  <mock:shadow-root>
    <div class="station-icon-wrapper station-icon-size-small">
      <svg class="progress-ring" width="20" height="20" viewBox="0 0 20 20" role="progressbar" aria-label="Collection progress" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0" focusable="false">
        <circle class="progress-ring-track" cx="10" cy="10" r="8.5" stroke-width="3" fill="none"></circle>
        <circle class="progress-ring-fill" cx="10" cy="10" r="8.5" stroke-width="3" fill="none" stroke-linecap="round" stroke-dasharray="53.40707511102649" stroke-dashoffset="53.40707511102649" transform="rotate(-90 10 10)"></circle>
      </svg>
      <div class="station-icon">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  13
</sc-station-icon>
`;

exports[`render station icon at lower limit (collectedPercent equals lowerLimitPercent) shows 0% progress 1`] = `
<sc-station-icon class="hydrated">
  <mock:shadow-root>
    <div class="station-icon-wrapper station-icon-size-normal">
      <svg class="progress-ring" width="30" height="30" viewBox="0 0 30 30" role="progressbar" aria-label="Collection progress" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0" focusable="false">
        <circle class="progress-ring-track" cx="15" cy="15" r="13.5" stroke-width="3" fill="none"></circle>
        <circle class="progress-ring-fill" cx="15" cy="15" r="13.5" stroke-width="3" fill="none" stroke-linecap="round" stroke-dasharray="84.82300164692441" stroke-dashoffset="84.82300164692441" transform="rotate(-90 15 15)"></circle>
      </svg>
      <div class="station-icon">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  13
</sc-station-icon>
`;

exports[`render station icon below lower limit (collectedPercent below lowerLimitPercent) shows 0% progress 1`] = `
<sc-station-icon class="hydrated">
  <mock:shadow-root>
    <div class="station-icon-wrapper station-icon-size-normal">
      <svg class="progress-ring" width="30" height="30" viewBox="0 0 30 30" role="progressbar" aria-label="Collection progress" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0" focusable="false">
        <circle class="progress-ring-track" cx="15" cy="15" r="13.5" stroke-width="3" fill="none"></circle>
        <circle class="progress-ring-fill" cx="15" cy="15" r="13.5" stroke-width="3" fill="none" stroke-linecap="round" stroke-dasharray="84.82300164692441" stroke-dashoffset="84.82300164692441" transform="rotate(-90 15 15)"></circle>
      </svg>
      <div class="station-icon">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  13
</sc-station-icon>
`;

exports[`render station icon just above lower limit starts showing progress 1`] = `
<sc-station-icon class="hydrated">
  <mock:shadow-root>
    <div class="station-icon-wrapper station-icon-size-normal">
      <svg class="progress-ring" width="30" height="30" viewBox="0 0 30 30" role="progressbar" aria-label="Collection progress" aria-valuemin="0" aria-valuemax="100" aria-valuenow="4" focusable="false">
        <circle class="progress-ring-track" cx="15" cy="15" r="13.5" stroke-width="3" fill="none"></circle>
        <circle class="progress-ring-fill" cx="15" cy="15" r="13.5" stroke-width="3" fill="none" stroke-linecap="round" stroke-dasharray="84.82300164692441" stroke-dashoffset="81.43008158104743" transform="rotate(-90 15 15)"></circle>
      </svg>
      <div class="station-icon">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  13
</sc-station-icon>
`;

exports[`render station icon with NaN collectedPercent falls back to 0% progress 1`] = `
<sc-station-icon class="hydrated">
  <mock:shadow-root>
    <div class="station-icon-wrapper station-icon-size-normal">
      <svg class="progress-ring" width="30" height="30" viewBox="0 0 30 30" role="progressbar" aria-label="Collection progress" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0" focusable="false">
        <circle class="progress-ring-track" cx="15" cy="15" r="13.5" stroke-width="3" fill="none"></circle>
        <circle class="progress-ring-fill" cx="15" cy="15" r="13.5" stroke-width="3" fill="none" stroke-linecap="round" stroke-dasharray="84.82300164692441" stroke-dashoffset="84.82300164692441" transform="rotate(-90 15 15)"></circle>
      </svg>
      <div class="station-icon">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  13
</sc-station-icon>
`;

exports[`render station icon with custom lowerLimitPercent above boundary shows progress 1`] = `
<sc-station-icon class="hydrated">
  <mock:shadow-root>
    <div class="station-icon-wrapper station-icon-size-normal">
      <svg class="progress-ring" width="30" height="30" viewBox="0 0 30 30" role="progressbar" aria-label="Collection progress" aria-valuemin="0" aria-valuemax="100" aria-valuenow="15" focusable="false">
        <circle class="progress-ring-track" cx="15" cy="15" r="13.5" stroke-width="3" fill="none"></circle>
        <circle class="progress-ring-fill" cx="15" cy="15" r="13.5" stroke-width="3" fill="none" stroke-linecap="round" stroke-dasharray="84.82300164692441" stroke-dashoffset="72.09955139988575" transform="rotate(-90 15 15)"></circle>
      </svg>
      <div class="station-icon">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  13
</sc-station-icon>
`;

exports[`render station icon with custom lowerLimitPercent at boundary shows 0% progress 1`] = `
<sc-station-icon class="hydrated">
  <mock:shadow-root>
    <div class="station-icon-wrapper station-icon-size-normal">
      <svg class="progress-ring" width="30" height="30" viewBox="0 0 30 30" role="progressbar" aria-label="Collection progress" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0" focusable="false">
        <circle class="progress-ring-track" cx="15" cy="15" r="13.5" stroke-width="3" fill="none"></circle>
        <circle class="progress-ring-fill" cx="15" cy="15" r="13.5" stroke-width="3" fill="none" stroke-linecap="round" stroke-dasharray="84.82300164692441" stroke-dashoffset="84.82300164692441" transform="rotate(-90 15 15)"></circle>
      </svg>
      <div class="station-icon">
        <slot></slot>
      </div>
    </div>
  </mock:shadow-root>
  13
</sc-station-icon>
`;
